welcome.lessons.welcome.bat.bool2.NearTen.scala.error
nearTen:-6: error: Missing closing brace `}' assumed here
try {
^nearTen:1: error: expected class or object definition
def nearTen(num:Int):Boolean = {
^